# belajar_web_service_rust

./: .env.example  Cargo.toml  README.md
doc/API DOC/: ADD USER.bru  BASE URL.bru  DELETE USER.bru  GET ALL USER.bru  GET DETAIL USER.bru  UPDATE USER.bru  bruno.json
src/: main.rs
src/configs/: config.rs
src/controllers/: controller.rs
src/models/: model.rs
src/routes/: route.rs
