[package]
name = "belajar_web_service_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
dotenv = "0.15.0"
futures = "0.3.30"

[dependencies.mongodb]
version = "2.8.2"
features = ["tokio-runtime"]